<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Police</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="camera">Camera</string>
    <string name="video">Video Recorder</string>
    <string name="record">Audio Recorder</string>
    <string name="files">Files</string>
    <string name="setting">Setting</string>
    <string name="wireless">FaceTime</string>
    <string name="back">Back</string>
    <string name="storage_no_enough">Sorry, the storage is not enough!</string>
    <string name="timeCount">00:00:00</string>
    <string name="wireless2">Wireless</string>
    <string name="device">Device</string>
    <string name="wifi">WIFI</string>
    <string name="wifi_setting">WIFI Setting</string>
    <string name="threeg">3G</string>
    <string name="storage">Storage</string>
    <string name="about">About</string>
    <string name="connected">Connected</string>
    <string name="storage_describe">Storage(Available/Total)</string>
    <string name="camera_file">Pciture</string>
    <string name="video_file">Video</string>
    <string name="audio_file">Audio</string>
    <string name="device_name">Device</string>
    <string name="android_version">Platform</string>
    <string name="version">Software Version</string>
    <string name="level">Level</string>
    <string name="security">Security</string>
    <string name="connect">Connect</string>
    <string name="cancel">Cancel</string>
    <string name="video_recording">Video Recording</string>
    <string name="audio_recording">Audio Recording</string>
    <string name="valume">Valume</string>
    <string name="valume_modify">Modify Valume</string>
    <string name="brightness">Brightness</string>
    <string name="brightness_modify">Modify Brightness</string>
    <string name="resolution">Resolution</string>
    <string name="video_resolution">Video Resolution</string>
    <string name="video_resolution_modify">Modify Video Resolution</string>
    <string name="function">Function</string>
    <string name="wifi_1">Bad</string>
    <string name="wifi_2">Not Bad</string>
    <string name="wifi_3">Good</string>
    <string name="wifi_4">Very Good</string>
    	<string name="time1">00:00</string>
	<string name="time2">/00:00</string>
	<string name="baifenbi"> %</string>
		<string name="camera_succcess">Take photo successfully!</string>
	<string name="video_success">Save video successfully!</string>
	<string name="audio_success">Save audio seccessfully!</string>
	<string name="camera_fail">Take photo failed!</string>
	<string name="video_fail">Save video failed!</string>
	<string name="audio_fail">Save audio failed!</string>
	<string name="plus">*</string>
	<string name="device_name_detail">Phenix Police Device</string>
	<string name="time_range_1">Today</string>
	<string name="time_range_2">This Week</string>
	<string name="time_range_3">This Month</string>
	<string name="time_range_4">After three months ago</string>
	<string name="time_range_5">Before three months ago</string>
	<string name="police_left">Police</string>
	<string name="police_right">Police</string>
	<string name="police_detail">Police</string>
	<string name="usb_warming">Usb Warming</string>
	<string name="usb_yes">yes</string>
	<string name="usb_no">no</string>
	<string name="av">AvIn</string>
	<string name="usb_connected">haha</string>
    <string name="userName">name</string>
    <string name="password">password</string>
    <string name="serverIP">server</string>
    <string name="login">login</string>
    <string name="online">online</string>
    <string name="forgetwifi">Forget</string>
    <string name="sure_forgetwifi">Sure to forget the information?</string>
    <string name="a9_loading">loading</string>
    <string name="a9_connected">connected</string>
</resources>