<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".A9TerminalActivity" >

    <TextView
        android:id="@+id/tv_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="18dp"
        android:text="@string/userName" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_userName"
        android:layout_below="@+id/tf_userName"
        android:layout_marginTop="20dp"
        android:text="@string/password" />

    <TextView
        android:id="@+id/tv_serverIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_userName"
        android:layout_below="@+id/tf_password"
        android:layout_marginTop="20dp"
        android:text="@string/serverIP" />

    <EditText
        android:id="@+id/tf_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tv_userName"
        android:ems="10"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/tf_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tv_password"
        android:ems="10"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/tf_serverIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tv_serverIP"
        android:ems="10" />

</RelativeLayout>
