<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4682B4">
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="200px"
        >
        <ImageButton 
            android:id="@+id/main_menu"
            android:layout_height="80px"
            android:layout_width="80px"
            android:layout_marginLeft="10px"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:src="@drawable/main_menu"
            android:scaleType="fitXY"
            android:clickable="true"
            />
	   	<LinearLayout 
	            android:id="@+id/header"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal"
	            android:layout_centerInParent="true"
	            android:background="@android:color/transparent"
	            >
	            <TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textSize="36sp"
	                android:textColor="@android:color/white"
	                android:text="@string/police_left"
	                android:gravity="bottom"
	                android:layout_marginRight="20px"/>
	            <ImageView 
	                android:layout_height="80px"
	                android:layout_width="80px"
	                android:src="@drawable/ic_launcher"/>
	            <TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textSize="36sp"
	                android:textColor="@android:color/white"
	                android:text="@string/police_right"
	                android:gravity="bottom"
	                android:layout_marginLeft="20px"/>
	        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="360px"
        android:layout_marginTop="200px"
        >
        
       <RelativeLayout
	        android:id="@+id/camera_layout"
	        android:layout_width="480dp"
	        android:layout_height="360dp"
	        android:gravity="top"
	        android:background="@drawable/audio_back"
        	>
	             <ImageButton
		            android:id="@+id/record"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_centerInParent="true"
		            android:background="@drawable/start"/>
    	        <LinearLayout 
    	            android:id="@+id/bar_timer"
		            android:layout_width="wrap_content"
		            android:layout_height="24dp"
		            android:orientation="horizontal"
		            android:layout_alignParentBottom="true"
		            android:layout_alignParentRight="true"
		            android:visibility="invisible"
		            android:layout_marginRight="10dp"
		            >
		            <TextView 
		                android:id="@+id/recordType"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/audio_recording"/>
		            <ImageButton
			            android:id="@+id/redPoint"
			            android:layout_width="24dp"
			            android:layout_height="24dp"
			            android:scaleType="fitCenter"
			            android:src="@drawable/red_point"
			            android:background="#00000000"/>
		       		 <TextView 
			            android:id="@+id/timeCount"
			            android:layout_height="wrap_content"
			            android:layout_width="wrap_content"
			            android:text="@string/timeCount"
		            />
       			 </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>