    <RelativeLayout 
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/table_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main_menu"
        >
        <LinearLayout 
            android:id="@+id/menu_list"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="vertical">
            <RelativeLayout 
                android:id="@+id/menu_camera"
                android:layout_height="120px"
                android:layout_width="match_parent"
                android:background="#AA00FFFF">
                <ImageView 
                    android:layout_width="60px"
                    android:layout_height="60px"
                    android:scaleType="fitXY"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="80px"
                    android:src="@drawable/menu_camera"/>
                <TextView 
                    android:textSize="22dp"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="80px"
                    android:gravity="center_vertical"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="140px"
                    android:text="@string/camera"/>
            </RelativeLayout>
            <RelativeLayout 
                android:id="@+id/menu_audio"
                android:layout_height="120px"
                android:layout_width="match_parent">
                <ImageView 
                    android:layout_width="80px"
                    android:layout_height="80px"
                    android:scaleType="fitXY"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="60px"
                    android:src="@drawable/menu_audio"/>
                <TextView 
                    android:textSize="22dp"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="80px"
                    android:gravity="center_vertical"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="140px"
                    android:text="@string/record"/>
            </RelativeLayout>
            <RelativeLayout 
                android:id="@+id/menu_files"
                android:layout_height="120px"
                android:layout_width="match_parent">
                <ImageView 
                    android:layout_width="80px"
                    android:layout_height="80px"
                    android:scaleType="fitXY"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="60px"
                    android:src="@drawable/menu_files"/>
                <TextView  
                    android:textSize="22dp"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="80px"
                    android:gravity="center_vertical"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="140px"
                    android:text="@string/files"/>
            </RelativeLayout>
            <RelativeLayout 
                android:id="@+id/menu_setting"
                android:layout_height="120px"
                android:layout_width="match_parent">
                <ImageView 
                    android:layout_width="80px"
                    android:layout_height="80px"
                    android:scaleType="fitXY"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="60px"
                    android:src="@drawable/menu_setting"/>
                <TextView  
                    android:textSize="22dp"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="80px"
                    android:gravity="center_vertical"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="140px"
                    android:text="@string/setting"/>
            </RelativeLayout>
            <RelativeLayout 
                android:id="@+id/menu_wireless"
                android:layout_height="120px"
                android:layout_width="match_parent">
                <ImageView 
                    android:layout_width="80px"
                    android:layout_height="80px"
                    android:scaleType="fitXY"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="60px"
                    android:src="@drawable/menu_wireless"/>
                <TextView  
                    android:textSize="22dp"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="80px"
                    android:gravity="center_vertical"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="140px"
                    android:text="@string/wireless"/>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
